--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Studion</title>
 </head>
 <body>
-    <nav>
-        <h1>Studi<span>on</span>Eventos<span></h1>
-        <ul>
+    <nav class="navbar">
+        <h1 class="logo-studion">
+            Studi<span class="copy--primary">on</span> 
+            <span class="logo-studion__subtitle">Eventos</span>
+        </h1>
+        <ul class="navbar__links"> 
             <li>
                 <a href="#empresa"> Empresa </a>
             </li>
@@ -31,11 +35,14 @@
     </nav>
 
     <header>
-        <div>
-            <div>
-                <h6><span>Próximo evento</span> - Dia 25 de setembro às 19h</h6>
-                <h2><span>Creative</span> Minds</h2>
-                <button>Saiba Mais</button>
+        <div id="slider">
+            <div class="slide">
+                <img class="slide__background-image" src="../src/images/banner.jpg" alt="Studion Banner"/>
+                <div class="slide__copy">
+                    <h6><span class="copy--primary">Próximo evento</span> - Dia 25 de setembro às 19h</h6>
+                    <h2><span class="copy--primary">Creative</span> Minds</h2>
+                    <button class="btn btn--slide">Saiba Mais</button>
+                </div>
             </div>
         </div>
     </header>
