--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Studion</title>
   </head>
 
@@ -16,36 +24,39 @@
         </h1>
         <ul class="navbar__links">
           <li>
-            <a href="#empresa">
+            <a href="enterprise.html">
               Empresa
             </a>
           </li>
           <li>
-            <a href="#eventos">
+            <a href="events.html">
               Eventos
             </a>
           </li>
           <li>
-            <a href="#galeria">
+            <a href="gallery.html">
               Galeria
             </a>
           </li>
           <li>
-            <a href="#depoimentos">
+            <a href="testimonials.html">
               Depoimentos
             </a>
           </li>
           <li>
-            <a href="#contatos">
+            <a href="contact.html">
               Contatos
             </a>
           </li>
         </ul>
+        <button class="navbar__menu-btn">
+          <i class="fas fa-bars"></i>
+        </button>
       </div>
     </nav>
 
     <header>
-      <div id="slider">
+      <div class="slider">
         <div class="slide">
           <img
             class="slide__background-image"
@@ -53,23 +64,59 @@
             alt="Studion Banner"
           />
           <div class="slide__copy">
-            <h6>
-              <span class="copy--primary">Próximo evento</span> - Dia 25 de
-              setembro às 19h
-            </h6>
-            <h2><span class="copy--primary">Creative</span> Minds</h2>
-            <button class="btn btn--slide">Saiba Mais</button>
+            <div class="slide__copy__container">
+              <h6>
+                <span class="copy--primary">Próximo evento</span> - Dia 25 de
+                setembro às 19h
+              </h6>
+              <h2><span class="copy--primary">Creative</span> Minds</h2>
+              <button class="btn btn--slide">Saiba Mais</button>
+            </div>
+          </div>
+        </div>
+        <div class="slide">
+          <img
+            class="slide__background-image"
+            src="./images/banner2.jpg"
+            alt="Studion Banner"
+          />
+          <div class="slide__copy">
+            <div class="slide__copy__container">
+              <h6>
+                <span class="copy--primary">Próximo evento</span> - Dia 25 de
+                setembro às 19h
+              </h6>
+              <h2><span class="copy--primary">FEST</span> FORWARD</h2>
+              <button class="btn btn--slide">Saiba Mais</button>
+            </div>
+          </div>
+        </div>
+        <div class="slide">
+          <img
+            class="slide__background-image"
+            src="./images/banner3.jpg"
+            alt="Studion Banner"
+          />
+          <div class="slide__copy">
+            <div class="slide__copy__container">
+              <h6>
+                <span class="copy--primary">Próximo evento</span> - Dia 25 de
+                setembro às 19h
+              </h6>
+              <h2><span class="copy--primary">SHOW</span> EVENT</h2>
+              <button class="btn btn--slide">Saiba Mais</button>
+            </div>
           </div>
         </div>
       </div>
     </header>
 
     <main>
-      <section id="counter">
+      <section id="counter" class="counter">
         <ul class="container counter__container">
           <li>
             <h3>
-              + de 500
+              + de <span class="counter__number">500</span>
               <small>
                 eventos realizados
               </small>
@@ -77,7 +124,7 @@
           </li>
           <li>
             <h3>
-              + de 1.000.000
+              + de <span class="counter__number">1000000</span>
               <small>
                 de ingressos vendidos
               </small>
@@ -85,7 +132,7 @@
           </li>
           <li>
             <h3>
-              + de 300
+              + de <span class="counter__number">300</span>
               <small>
                 empresas atendidas
               </small>
@@ -113,13 +160,14 @@
         </div>
       </section>
 
-      <section class="quote"> 
+      <section class="quote">
         <div class="container quote__container">
           <div class="quote__copy">
             <h6>
-              Você informa a temática e nós planejamos um evento com tecnologia e
+              Você informa a temática e nós planejamos um evento com tecnologia
+              e
             </h6>
-            <h2><span class="copy--promary">Muito+ </span>Diversão</h2>
+            <h2><span class="copy--primary">Muito+ </span>Diversão</h2>
             <button class="btn btn--quote">Fazer cotação</button>
           </div>
         </div>
@@ -127,7 +175,6 @@
     </main>
 
     <footer class="footer">
-      
       <div class="container footer__container">
         <h2 class="logo-studion">
           Studi<span class="copy--primary">on</span>
@@ -137,7 +184,7 @@
           <label for="email">receba news e promoções</label>
           <div class="footer__form__email">
             <input id="email" type="email" placeholder="email" />
-            <button type="submit">
+            <button class="footer__form-button" type="submit">
               <i class="fas fa-paper-plane fa-2x"></i>
             </button>
           </div>
@@ -145,7 +192,7 @@
         <ul class="footer__social">
           <li>
             <a href="https://facebook.com/" target="_blank">
-              <i class='fab fa-facebook fa-2x'></i>
+              <i class="fab fa-facebook fa-2x"></i>
             </a>
           </li>
           <li>
@@ -165,8 +212,18 @@
       </div>
 
       <p>
-        <small>Studi<span class="copy--primary">ON</span> - Todos os direitos reservados.</small>
+        <small
+          >Studi<span class="copy--primary">ON</span> - Todos os direitos
+          reservados.</small
+        >
       </p>
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/3.3.0/jquery-migrate.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.0/jquery.waypoints.min.js"></script>
+    <script src="http://ciromattia.github.io/jquery.counterup/jquery.counterup.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
